[package]
name = "borealis-block-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora-standalone-engine = { git = "https://github.com/aurora-is-near/borealis-engine-lib" }
aurora-refiner-lib = { git = "https://github.com/aurora-is-near/borealis-engine-lib" }
aurora-refiner-types = { git = "https://github.com/aurora-is-near/borealis-engine-lib" }

serde_json = "1.0.83"
serde = { version = "1", features = [ "derive" ] }
clap = { version = "3.2.7", features = ["derive"] }

tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

# NEAR Lake Framework
near-lake-framework = "0.3.0"

regex = "1.7.0"